# bank_widget

./: .env  .env.template  .flake8  .flake8.ini  .gitignore  README.md  check_api.py  check_api_connection.py  connection_test.py  flake8.ini  isort.cfg  pyproject.toml  setup.py
bank_widget.egg-info/: PKG-INFO  SOURCES.txt
data/: operations.json  transactions.json
src/: config_logger.py  decorators.py  external_api.py  file_importer.py  generators.py  init.py  main.py  masks.py  processing.py  transaction_utils.py  utils.py  widget.py
src/external_api/: currency_converter.py
src/utils/: file_reader.py
tests/: conftest.py  test_api.py  test_currency_converter.py  test_decorators.py  test_file_importer.py  test_file_reader.py  test_generators.py  test_logging.py  test_main.py  test_mask.py  test_processing.py  test_widget.py
