[tool.poetry]
name = "bank_widget"
version = "0.1.0"
description = "Widget for displaying masked bank transactions"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.black]
line-length = 150
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 150

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
