[tool.poetry]
name = "bank_widget"
version = "0.1.0"
description = "Widget for displaying masked bank transactions"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.1.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 150
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_single_line = true
known_first_party = ["src"]
